# sm3-rainbow

./: .gitignore  Cargo.toml  LICENSE  README.md  test_coverage.sh
.github/workflows/: build_and_test.yml
benches/: sm3_benches.rs
src/: args.rs  generate_rt.rs  lib.rs  lookup_rt.rs  my_impl.rs  my_sm3_impl.rs  openssl_impl.rs  openssl_sm3_impl.rs  rainbow.rs  sm3.rs  sm3_hash.rs  util.rs
tests/: sm3_tests.rs
