[package]
name = "sm3-rainbow"
version = "0.1.0"
authors = ["Harry Chen <i@harrychen.xyz>"]
edition = "2018"

[lib]
name = "sm3"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
openssl-sys = { git = "https://github.com/jiegec/rust-openssl", branch = "add-sm3" }
openssl = { git = "https://github.com/jiegec/rust-openssl", branch = "add-sm3" }
hex = "0.4"

[dev-dependencies]
rand = "0.8"
