[package]
name = "sm3-rainbow"
version = "0.1.0"
authors = ["Harry Chen <i@harrychen.xyz>"]
edition = "2018"
publish = false

[lib]
name = "sm3"
path = "src/sm3.rs"

[[bin]]
name = "generate_rt"
path = "src/generate_rt.rs"

[[bin]]
name = "lookup_rt"
path = "src/lookup_rt.rs"

[dependencies]
byteorder = "1"
openssl-sys = { git = "https://github.com/jiegec/rust-openssl", branch = "add-sm3" }
openssl = { git = "https://github.com/jiegec/rust-openssl", branch = "add-sm3" }
hex = "0.4"
log = "0.4"
env_logger = "0.8"
rayon = "1"
indicatif = {version = "0.15", features = ["rayon"]}
clap = "3.0.0-beta.2"
rand = "0.8"
memmap = "0.7"

[dev-dependencies]
